<resources>
    <string name="app_name">运营中心</string>
    <!--<string name="app_name2">运营中心</string>-->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userName">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="auto_sign_in">自动登录</string>
    <string name="remember_the_password">记住密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username_password">The userName or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home_page">首页</string>
    <string name="monitor_page">运行监视</string>
    <string name="stationinfo_page">生产运营中心</string>
    <string name="stationinfo_page2">生产运营中心年计划发电量</string>
    <string name="linechar_stationspower_page">场站功率曲线对比</string>
    <string name="staticsticaltable_page">运行统计</string>
    <string name="jk_jrfd">今日发电(kWh)</string>
    <string name="jk_jryg">今日有功(kW)</string>
    <string name="test">首页首页首页首页2</string>
    <string name="test2">首页首页2</string>
    <string name="plan">省调计划</string>
    <string name="speed">平均风速</string>
    <string name="power">瞬时总有功</string>
    <string name="power_unit">kW</string>
    <string name="power1">瞬时有功</string>
    <string name="electricity">当日发电量</string>
    <string name="electricity1">日发电量</string>
    <string name="speed_unit">%1$sm/s</string>
    <string name="speed_unit2">风速：%1$sm/s</string>
    <string name="speed_unit3">m/s</string>
    <string name="active_power_unit">%1$skW</string>
    <string name="active_power_unit2">有功功率：%1$skW</string>
    <string name="active_power_unit3">有功：%1$skW</string>
    <string name="revs_unit">%1$srpm</string>
    <string name="revs_unit2">转速：%1$srpm</string>
    <string name="electricity_unit">%1$skwh</string>
    <string name="electricity_unit2">日发电量：%1$skWh</string>
    <string name="electricity_unit3">kWh</string>
    <string name="efficiency_unit">%1$s%%</string>
    <string name="efficiency_unit2">逆变效率：%1$s%%</string>
    <string name="efficiency_state2">逆变状态：%1$s</string>
    <string name="efficiency_state">状态：%1$s</string>
    <string name="test_value">0.00</string>
    <string name="stop">停用</string>
    <string name="run">发电</string>
    <string name="test_num">#01A</string>
    <string name="dialog_title">数据详情</string>
    <string name="fan_speed">风速：</string>
    <string name="fan_power">有功：</string>
    <string name="fan_revs">转速：</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="select_time">选择时间</string>
    <string name="select_station">选择场站</string>
    <string name="alarm_type">类型名</string>
    <string name="alarm_time">时间</string>
    <string name="alarm_content">事项</string>
    <string name="sure">确定</string>
    <string name="alarm_num">编号</string>
    <string name="title_plan">省调计划/MW</string>
    <string name="title_speed">平均风速m/s</string>
    <string name="title_speed_unit">m/s</string>
    <string name="title_speed_4">平均风速</string>
    <string name="title_radiation">总辐射瞬时值w/m2</string>
    <string name="title_radiation_unit">w/m2</string>
    <string name="title_radiation_4">总辐射值</string>
    <string name="title_power">瞬时总有功/MW</string>
    <string name="title_electricity">当日发电量/Mkwh</string>
    <string name="user_management_page">用户管理</string>
    <string name="user_id">ID</string>
    <string name="user_name">用户名</string>
    <string name="user_name2">用户</string>
    <string name="user_rights">权限</string>
    <string name="user_range">范围</string>
    <string name="user_operation">操作</string>
    <string name="user_level">等级</string>
    <string name="add_user_page">新增用户</string>
    <string name="update_user_page">修改用户信息</string>
    <string name="user_dialog_title">用户信息</string>
    <string name="alarm_station">场站</string>
</resources>
