<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:paddingTop="@dimen/little_margin"
              android:paddingBottom="@dimen/little_margin">
    <TextView
        android:id="@+id/alarm_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alarm_num"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alarm_station"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alarm_station"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alarm_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alarm_type"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alarm_time"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alarm_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:maxLines="5"
        android:text="@string/alarm_content"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"
        android:paddingLeft="@dimen/gridview_margin"/>
</LinearLayout>
