<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:paddingTop="@dimen/little_margin"
              android:paddingBottom="@dimen/little_margin">
    <TextView
        android:id="@+id/userId"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_id"
        android:textColor="@color/black"
        android:gravity="center|center_vertical"
        android:textSize="@dimen/content_text_size"/>
    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:gravity="center|center_vertical"
        android:textSize="@dimen/content_text_size"/>
    <TextView
        android:id="@+id/userRights"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/user_rights"
        android:textColor="@color/black"
        android:gravity="center|center_vertical"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="@dimen/content_text_size"/>
    <TextView
        android:id="@+id/userRange"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/user_range"
        android:textColor="@color/black"
        android:gravity="center|center_vertical"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="@dimen/content_text_size"/>
    <TextView
        android:id="@+id/userLevel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_level"
        android:textColor="@color/black"
        android:gravity="center|center_vertical"
        android:textSize="@dimen/content_text_size"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/updateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageView
            android:id="@+id/deleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>
</LinearLayout>
