<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_monitor_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zskj.jkxt.activity.MonitorDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_title_text_size"
            android:text="@string/back"
            android:drawableLeft="@android:drawable/ic_menu_revert"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_title_text_size"
            android:text="@string/monitor_page"/>
        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_title_text_size"
            android:text="@string/refresh"
            android:drawableRight="@android:drawable/ic_menu_rotate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo4"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/station_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/turquoise"/>
            <TextView
                android:id="@+id/station_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitor_page"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/gray"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_little_margin">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_little_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan"
                    android:textColor="@color/turquoise"
                    android:textSize="@dimen/normal_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_unit"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/black"
                android:text="@string/test_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_little_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textColor="@color/turquoise"
                    android:textSize="@dimen/normal_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_unit"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/black"
                android:text="@string/test_value"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_little_margin"
        android:paddingBottom="@dimen/activity_vertical_little_margin">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_little_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:textColor="@color/turquoise"
                    android:textSize="@dimen/normal_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_unit"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/total_active_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/black"
                android:text="@string/test_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_little_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electricity"
                    android:textColor="@color/turquoise"
                    android:textSize="@dimen/normal_text_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electricity_unit"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>
            <TextView
                android:id="@+id/daily_electricity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/black"
                android:text="@string/test_value"/>
        </LinearLayout>
    </LinearLayout>
    <GridView
        android:id="@+id/monitor_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:gravity="center"
        android:background="@color/black">
    </GridView>
</LinearLayout>
